# PacmanSFML-master

./: CMakeLists.txt  README.md
Data/Map/: map.tmx  terrainTiles_default.tsx
src/: Game.cpp  Game.h  Object.cpp  ResourceHandler.cpp  ResourceHandler.h  main.cpp  tile.cpp  tile.h
src/GameObjects/: BoundingBox.cpp  BoundingBox.h  GameObject.cpp  GameObject.h  coins.cpp  coins.h  pac.cpp  pac.h  ship.cpp  ship.h
